2013-04-15  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Merged from trunk. Open the XML data file
	  in binary mode to avoid getting extra carriage returns.

2012-12-19  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated to r7307.

2012-12-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Merged from trunk. Changed the
	  flags of LoadLibraryEx. Fixes a bug when loading event descriptions
	  from exe files.

2012-04-23  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Small changes merged from trunk.

2012-04-23  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Bug fixes and code re-indentation.

	* installer/pandora.mpi: Removed files under .svn from the installer.

2012-04-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Merged from trunk. Default to generic_data
	  if no module_type is not set.

2012-02-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Merged from trunk. Convert
	  tentacle_timeout to milliseconds.

2012-02-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Merged from trunk. Added a timeout to the
	  tentacle client execution

2012-02-02  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Merged from trunk. Added an uninstall action
	  to delete the agent's at job.

	* installer/scripts/delete_at_job.bat: Added to repository. Batch
	  script to delete the agent's at job.

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_perfcounter.cc,
	  modules/pandora_module_perfcounter.h: Use MinrGW's pdh.h
	  instead of our own definitions.

	* modules/pandora_module.cc: Fixed a bug in pre-conditions that led to an
	  infinite loop.

2011-12-12  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Removed some debugging messages.

	* modules/pandora_module.h,
	  modules/pandora_module.cc,
	  pandora_windows_service.cc: Fixed pre-conditions (were not working
	  properly).
